# cpp-algorithms

./: CMakeLists.txt  McCarthny.cpp  README.md  factorial.cpp  main.cpp  recsearch.cpp
recursive algorithms/: McCarthny.cpp  factorial.cpp  fibonacci.cpp  rec McCarthy.cpp  recMcCarthny.cpp  recfactorial.cpp  recfibonacci.cpp  recreversearray.cpp  recsearch.cpp  recsumofdigits
